box image updated

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
           </li>
         </ul>
       </div>
+      <div class="box-image"></div>
     </div>
   </main>
+
 </body>
 <footer>
   <div class="attribution">
